# guess-the-elo-ai

./: .gitattributes  .gitignore  LICENSE  Main.py  README.md  main.py  pyproject.toml  requirements.txt  server.py
Training Data/: games.csv
model/: model.json
notebooks/: parellel_api_requests_test.ipynb
opening_book/: eco.pgn
preprocess/: 01_extract_rapid.py  02_filter_length.py  03_clean.py  04_tokenize.py  05_balance.py  06_split.py
scripts/: preprocess.py  unzipper.py
src/: data_extractor.py  extract_openings.py  file_cleanup.py  filer_rapid.py  model.py  pgn_process.py
src/data/: preprocess.py
src/guess_the_elo/: dataset.py  eval.py  model.py  rating.py  tokenizer.py  train.py
src/models/: neural_network_model.py
src/utils/: clean_pgn.py  trim_opeings.py
tests/: api_test.py  preprocess_test.py
