[tool.poetry]
name = "guess-the-elo-ai"
version = "0.1.0"
description = ""
authors = ["Sayam Gupta <gupta.sayam2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
chess = "^1.11.1"
pandas = "^2.2.3"
grequests = "^0.7.0"
aiohttp = "^3.10.10"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
