[project]
name = "guess-the-elo-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zstandard>=0.22",
    "tqdm>=4.66",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "torch>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guess_the_elo"]
